*SVN*

* Duplicate the hash provided to AR::Base#to_xml to prevent unexpected side effects [Koz]

* Add a :namespace option to  AR::Base#to_xml [Koz]

* Deprecation tests. Remove warnings for dynamic finders and for the foo_count method if it's also an attribute. [Jeremy Kemper]

* Mock Time.now for more accurate Touch mixin tests.  #6213 [Dan Peterson]

* Improve yaml fixtures error reporting.  #6205 [Bruce Williams]

* Rename AR::Base#quote so people can use that name in their models. #3628 [Koz]

* Add deprecation warning for inferred foreign key. #6029 [Josh Susser]

* Fixed the Ruby/MySQL adapter we ship with Active Record to work with the new authentication handshake that was introduced in MySQL 4.1, along with the other protocol changes made at that time #5723 [jimw@mysql.com]

* Deprecation: use :dependent => :delete_all rather than :exclusively_dependent => true.  #6024 [Josh Susser]

* Document validates_presences_of behavior with booleans: you probably want validates_inclusion_of :attr, :in => [true, false].  #2253 [Bob Silva]

* Optimistic locking: gracefully handle nil versions, treat as zero.  #5908 [Tom Ward]

* to_xml: the :methods option works on arrays of records.  #5845 [Josh Starcher]

* Deprecation: update docs. #5998 [jakob@mentalized.net, Kevin Clark]

* Add some XmlSerialization tests for ActiveRecord [Rick Olson]

* has_many :through conditions are sanitized by the associating class.  #5971 [martin.emde@gmail.com]

* Tighten rescue clauses.  #5985 [james@grayproductions.net]

* Fix spurious newlines and spaces in AR::Base#to_xml output [Jamis Buck]

* has_one supports the :dependent => :delete option which skips the typical callback chain and deletes the associated object directly from the database.  #5927 [Chris Mear, Jonathan Viney]

* Nested subclasses are not prefixed with the parent class' table_name since they should always use the base class' table_name.  #5911 [Jonathan Viney]
