@@ -125,6 +125,8 @@ module ActiveRecord
         end
 
         def load_target
+          return nil unless defined?(@loaded)
+
           if !loaded? and (!@owner.new_record? || foreign_key_present)
             @target = find_target
           end
