@@ -1,5 +1,7 @@
 *SVN*
 
+* has_one associations with a nil target may be safely marshaled.  #6279 [norbauer, Jeremy Kemper]
+
 * Duplicate the hash provided to AR::Base#to_xml to prevent unexpected side effects [Koz]
 
 * Add a :namespace option to  AR::Base#to_xml [Koz]
